# data-science

./: README.md  pyproject.toml
lecture1/: Линейная алгебра_ сходство текстов и аппроксимация функций.ipynb  Центральная_предельная_теорема_своими_руками.ipynb
lecture10-neural-networks/: нейронные сети.ipynb
lecture2/: Задание 1. Оптимизация.ipynb
lecture3/: Задание 1.ipynb  Задание 2. Сравнение метрик качества бинарной классификации.ipynb
lecture4/: Задание 1. Корреляция.ipynb  Задание 2.ipynb
lecture5/: Задание 1. Бэггинг и случайный лес.ipynb  Задание 2. Градиентный бустинг.ipynb
lecture6/: PCA.ipynb  banner_placement.ipynb
lecture8/: pyproject.toml  Практическая работа по анализу текста 2.ipynb
lecture8/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
lecture8/lda_models/: lda_model_10_topics.model  lda_model_10_topics.model.expElogbeta.npy  lda_model_10_topics.model.state  lda_model_11_topics.model  lda_model_11_topics.model.expElogbeta.npy  lda_model_11_topics.model.state  lda_model_12_topics.model  lda_model_12_topics.model.expElogbeta.npy  lda_model_12_topics.model.state  lda_model_13_topics.model  lda_model_13_topics.model.expElogbeta.npy  lda_model_13_topics.model.state  lda_model_2_topics.model  lda_model_2_topics.model.expElogbeta.npy  lda_model_2_topics.model.state  lda_model_3_topics.model  lda_model_4_topics.model  (+20 more)
lecture9 временные ряды/: 99000000000_train_month.csv  99000000000_train_week.csv  pyproject.toml  Практическая работа по анализу временных рядов.ipynb
venv1-6/: pyproject.toml
venv8/: pyproject.toml
(+1 files in other folders)
