[project]
name = "venv8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "gensim>=4.3.3",
    "jupyter>=1.1.1",
    "natasha>=1.6.0",
    "nltk>=3.9.1",
    "numba>=0.60.0",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "pyldavis>=3.4.1",
    "pymorphy3>=2.0.2",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "umap-learn>=0.5.7",
    "wordcloud>=1.9.4",
]
